--- a/conf/spark.conf
+++ b/conf/spark.conf
@@ -1,3 +1,3 @@
 spark.app.name=lending club
-spark.executer.cores=5
-spark.executer.memory=10 gb
+spark.executer.cores=10 gb
+spark.executer.core=10 gb
